# dirtree

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml  rust.yml
src/: main.rs  tests.rs
