[package]
name = "dirtree"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Dervakos <ryanwashacked@gmail.com>"]
description = "A tool for generating and updating directory structure representations in README files"

[dependencies]
walkdir = "2.3.2"
ignore = "0.4.23"
clap = { version = "4.5.17", features = ["derive"] }
tempfile = "3.12.0"
colored = "2.1.0"


[dev-dependencies]
tempfile = "3.2"

[[bin]]
name = "dirtree"
path = "src/main.rs"

